--- a/config.json
+++ b/config.json
@@ -6,9 +6,9 @@
     "pacman-key --init",
     "pacman-key --recv-key FBA220DFC880C036 --keyserver keyserver.ubuntu.com",
     "pacman-key --lsign-key FBA220DFC880C036",
-    "pacman -U 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-keyring.pkg.tar.zst' 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg.tar.zst'",
+    "pacman -U --noconfirm 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-keyring.pkg.tar.zst' 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg.tar.zst'",
     "echo -e '\n[chaotic-aur]\nInclude = /etc/pacman.d/chaotic-mirrorlist\n' | sudo tee -a /etc/pacman.conf",
-    "pacman -Syyu paru scc asdf-vm powerpill snapper-rollback btrfs-du downgrade, scc"
+    "pacman -Syyu --noconfirm paru scc asdf-vm powerpill snapper-rollback btrfs-du downgrade, scc"
   ],
   "filesystem": "btrfs",
   "gfx_driver": "VMware / VirtualBox (open-source)",
