--- a/config.json
+++ b/config.json
@@ -22,7 +22,8 @@
   "keyboard-language": "us",
   "mirror-region": "Worldwide",
   "nic": {
-    "NetworkManager": true
+    "NetworkManager": true,
+    "nic": "Use NetworkManager (necessary to configure internet graphically in GNOME and KDE)"
   },
   "ntp": true,
   "packages": [
