--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "custom-commands": [
     "usermod -aG docker gazorby",
     "pacman-key --init",
+    "pacman-key --populate archlinux",
     "pacman-key --recv-key FBA220DFC880C036 --keyserver keyserver.ubuntu.com",
     "pacman-key --lsign-key FBA220DFC880C036",
     "pacman -U --noconfirm 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-keyring.pkg.tar.zst' 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg.tar.zst'",
