♻️ refactor: add bitwarden cli

--- a/config.json
+++ b/config.json
@@ -57,7 +57,8 @@
     "starship",
     "ufw",
     "wget",
-    "yarn"
+    "yarn",
+    "bitwarden-cli"
   ],
   "profile": "kde",
   "services": [
