♻️ refactor: add jq

--- a/config.json
+++ b/config.json
@@ -58,7 +58,8 @@
     "ufw",
     "wget",
     "yarn",
-    "bitwarden-cli"
+    "bitwarden-cli",
+    "jq"
   ],
   "profile": "kde",
   "services": [
