--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     "pacman-key --lsign-key FBA220DFC880C036",
     "pacman -U --noconfirm 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-keyring.pkg.tar.zst' 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg.tar.zst'",
     "echo -e '\n[chaotic-aur]\nInclude = /etc/pacman.d/chaotic-mirrorlist\n' | sudo tee -a /etc/pacman.conf",
-    "pacman -Syyu --noconfirm paru downgrade powerpill asdf-vm",
+    "pacman -Rs archlinux-appstream-data",
+    "pacman -Syyu --noconfirm paru downgrade powerpill asdf-vm pamac-aur",
     "chsh -s /bin/fish gazorby"
   ],
   "filesystem": "btrfs",
