--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "pacman -U --noconfirm 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-keyring.pkg.tar.zst' 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg.tar.zst'",
     "echo -e '\n[chaotic-aur]\nInclude = /etc/pacman.d/chaotic-mirrorlist\n' | sudo tee -a /etc/pacman.conf",
     "pacman -Syy",
-    "pacman -R --noconfirm gnome-software-packagekit-plugin archlinux-appstream-data",
+    "pacman -R --noconfirm archlinux-appstream-data",
     "pacman -Sy --noconfirm paru downgrade powerpill asdf-vm nerd-fonts-fira-code ttf-twemoji",
     "echo 'gazorby ALL = NOPASSWD: /usr/sbin/paru' | EDITOR='tee -a' visudo",
     "echo 'gazorby ALL = NOPASSWD: /usr/sbin/pacman' | EDITOR='tee -a' visudo",
