--- a/config.json
+++ b/config.json
@@ -17,10 +17,10 @@
     "echo -e '\n[chaotic-aur]\nInclude = /etc/pacman.d/chaotic-mirrorlist\n' | sudo tee -a /etc/pacman.conf",
     "pacman -Syy",
     "pacman -R --noconfirm gnome-software-packagekit-plugin archlinux-appstream-data",
-    "pacman -Sy --noconfirm paru downgrade powerpill asdf-vm pamac-aur nerd-fonts-fira-code ttf-twemoji",
+    "pacman -Sy --noconfirm paru downgrade powerpill asdf-vm nerd-fonts-fira-code ttf-twemoji",
     "echo 'gazorby ALL = NOPASSWD: /usr/sbin/paru' | EDITOR='tee -a' visudo",
     "echo 'gazorby ALL = NOPASSWD: /usr/sbin/pacman' | EDITOR='tee -a' visudo",
-    "sudo -u gazorby paru -S --noconfirm xkb-altgr-weur await doggo-bin",
+    "sudo -u gazorby paru -S --noconfirm xkb-altgr-weur snapper-rollback",
     "head -n -2 /etc/sudoers > /etc/sudoers",
     "chsh -s /bin/fish gazorby"
   ],
