--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   ],
   "archinstall-language": "English",
   "audio": "pipewire",
-  "bootloader": "systemd-bootctl",
+  "bootloader": "grub-install",
   "custom-commands": [
     "usermod -aG docker gazorby",
     "pacman-key --init",
