--- a/config.json
+++ b/config.json
@@ -15,9 +15,7 @@
     "pacman-key --lsign-key FBA220DFC880C036",
     "pacman -U --noconfirm 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-keyring.pkg.tar.zst' 'https://cdn-mirror.chaotic.cx/chaotic-aur/chaotic-mirrorlist.pkg.tar.zst'",
     "echo -e '\n[chaotic-aur]\nInclude = /etc/pacman.d/chaotic-mirrorlist\n' | sudo tee -a /etc/pacman.conf",
-    "pacman -Syy",
-    "pacman -R --noconfirm gnome-software-packagekit-plugin archlinux-appstream-data",
-    "pacman -Sy --noconfirm paru downgrade powerpill asdf-vm nerd-fonts-fira-code ttf-twemoji",
+    "pacman -Syy --noconfirm paru downgrade powerpill asdf-vm nerd-fonts-fira-code ttf-twemoji archlinux-appstream-data",
     "echo 'gazorby ALL = NOPASSWD: /usr/sbin/paru' | EDITOR='tee -a' visudo",
     "echo 'gazorby ALL = NOPASSWD: /usr/sbin/pacman' | EDITOR='tee -a' visudo",
     "sudo -u gazorby paru -S --noconfirm xkb-altgr-weur snapper-rollback",
